--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/image-rank-drag/image-rank-drag.component.html
@@ -1,13 +1,13 @@
-<div *ngIf="showModalVideo && bmxClientPageOverview"  id="myModal" class="modal-video" style="display: flex;flex-direction: column;gap: 2px;">
+<div *ngIf="showCreationModalVideo && bmxClientPageOverview"  id="myModal" class="modal-video" style="display: flex;flex-direction: column;gap: 2px;">
     <!-- <label class="container-checkbox">Don't show again
-        <input (click)="saveSelection()" type="checkbox" value="Bike" #modalChecked>
-        <span class="checkmark">&#x2714;</span>
+        <input (click)="saveSelection()" type="checkbox" value="Bike" #modalChecked> 
+        <span class="checkmark">&#x2714;</span>        
     </label> -->
     <div class="modal-content">
-        <video src='{{VIDEO_PATH}}'controls></video>
+        <video src='{{CREATION_VIDEO_PATH}}'controls></video>
 
     </div>
-    <button class="btn btn-raised close-modal" (click)="showModalVideo=false">close</button>
+    <button class="btn btn-raised close-modal" (click)="showCreationModalVideo=false">close</button>
 </div>
 <!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  SETTINGS ICONS  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
 <div *ngIf="bmxClientPageOverview" style="display: flex;
@@ -136,7 +136,7 @@
             </button>
         </div>
 
-        <button (click)="showModalVideo=true; editSingleTableCells = false" class="add-column" matTooltip="see tutorial"
+        <button (click)="showCreationModalVideo=true; editSingleTableCells = false" class="add-column" matTooltip="see tutorial"
                 matTooltipPosition="above" mat-icon-button aria-label="ranking">
                 <mat-icon style="font-size: 26px;" class="full-icon">video_library</mat-icon>
         </button>
@@ -429,7 +429,7 @@
                     value="bmxItem.componentSettings[0].ratingScaleTitle"></textarea>
 
                 <!-- <button *ngIf="this.bmxItem.componentSettings[0].rankType == 'dragAndDrop' &&
-                   (!editSingleTableCells && y==0)"
+                   (!editSingleTableCells && y==0)" 
                   mat-button style="background-color:#ee7f25 ;color: white;
                   animation: rubberBand 700ms ease-in  forwards;"
                   [style.backgroundColor]="(y==0)?'#ee7f25':'#324395'"
@@ -444,7 +444,7 @@
                 <div *ngFor="let columnName of columnsNames; let e =  index"
                     style="display: flex;align-items: center;justify-content: center;"
                     [ngClass]="(columnName.includes('Comments') == true)?'red':'blue'"
-                    [style.padding]="bmxItem.componentSettings[0].rowHeight + 'px'" [style.width]="(columnName == 'rationale')?bmxItem.componentSettings[0].rationalewidth + 'px':
+                    [style.padding]="bmxItem.componentSettings[0].rowHeight + 'px'" [style.width]="(columnName == 'rationale')?bmxItem.componentSettings[0].rationalewidth + 'px': 
                 (columnName == 'RATE')?bmxItem.componentSettings[0].rateWidth + 'px':
                 (columnName == 'nameCandidates')?bmxItem.componentSettings[0].nameCandidatesWidth + 'px':
                 (columnName.includes('Comments'))?bmxItem.componentSettings[0].commentsWidth + 'px':
@@ -453,9 +453,9 @@
 
                     <!-- 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 HEADER TEXT AREA 🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢🟢 -->
                     <div *ngIf="(y == 0)" class="header-title " (mouseenter)="selectedColumn = e">
-
+                        
                         <div style="display: flex;flex-direction: row;justify-content: space-between;">
-
+                                             
                             <textarea *ngIf="editSingleTableCells"
                                 [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
                                 style="text-align: center; font-weight: bold;color: #324395;" class="row-box"
@@ -526,7 +526,7 @@
                             <div style="display: none;">
                                 <button
                                     (click)="maxRuleCounterMinus();bmxItem.componentText[y]['RATE'] = 0;leaveStar(y)"
-                                    *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 " style="background-color: #ee7f25;
+                                    *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 " style="background-color: #ee7f25;    
                             color: white;
                             min-width: 20px;
                             line-height: 19px;
@@ -540,7 +540,7 @@
                             <div style="display: flex;gap: 60px;flex-direction: column;">
                                 <div *ngFor="let criteria of testName.CRITERIA  let x =  index">
                                     <button (click)="criteria.RATE = 0;leaveCriteriaStar(y,x);maxRuleCounterMinus()"
-                                        *ngIf="criteria.RATE>0 && y != 0 " style="background-color: #ee7f25;
+                                        *ngIf="criteria.RATE>0 && y != 0 " style="background-color: #ee7f25;    
                              color: white;
                              min-width: 20px;
                              line-height: 19px;
@@ -584,7 +584,7 @@
 
 
                         <!-- TEXT AREA TO EDIT TABLE CELL CONTENT -->
-                        <textarea *ngIf="y !== 0  && editSingleTableCells && (columnName.includes('RadioColumn') != true) &&
+                        <textarea *ngIf="y !== 0  && editSingleTableCells && (columnName.includes('RadioColumn') != true) && 
                              columnName.includes('Comments') != true &&  columnName.includes('RATE') != true"
                             [style.width]="(columnName == 'rationale')?bmxItem.componentSettings[0].rationalewidth + 'px':bmxItem.componentSettings[0].columnWidth +'px'"
                             [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'" cdkTextareaAutosize
@@ -592,7 +592,7 @@
                             style="outline: none;text-align: center;" class="row-box"
                             [(ngModel)]="testName[columnName]"></textarea>
 
-                        <p *ngIf="y !== 0  && !editSingleTableCells && (columnName.includes('name') != true) &&
+                        <p *ngIf="y !== 0  && !editSingleTableCells && (columnName.includes('name') != true) && 
                         (columnName.includes('RadioColumn') != true) &&  columnName.includes('Comments') != true &&
                           columnName.includes('RATE') != true"
                             [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
@@ -624,14 +624,14 @@
         <div style="font-size: 18px;color: #ee7f25;padding-bottom: 20px;">
             {{bmxItem.componentSettings[0].categoryDescription}}</div>
     </div>
-
+    
     <div class="scroller-style main-container" cdkDropList (cdkDropListDropped)="checkDragEvetn($event)"
         [cdkDropListAutoScrollDisabled]="false" [cdkDropListLockAxis]="'y'">
 
         <div *ngFor="let testName of bmxItem.componentText; let y = index" style="margin-bottom: 10px;" cdkDrag>
 
             <div (click)="openSelected(y)" class="test-name-table" *ngIf="(y != 0)" [style.height]="(open(y))?'':'100px'">
-
+                              
                 <!-- 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 RATE BUTTONS 🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸🩸 -->
                 <button (click)="maxRuleCounterMinus();bmxItem.componentText[y]['RATE'] = 0;leaveStar(y)"
                     *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 " style="background-color: #ee7f25;color: white;margin: 5px;width: 30px;
@@ -650,7 +650,7 @@
                 <div style="display: flex;gap: 23px;padding-top: 10px;position: absolute;right: 24px;">
                     <div *ngFor="let criteria of testName.CRITERIA  let x =  index">
                         <button (click)="criteria.RATE = 0;leaveCriteriaStar(y,x);maxRuleCounterMinus()"
-                            *ngIf="criteria.RATE>0 && y != 0 " style="background-color: #ee7f25;
+                            *ngIf="criteria.RATE>0 && y != 0 " style="background-color: #ee7f25;    
                              color: white;
                              min-width: 20px;
                              line-height: 19px;
@@ -705,7 +705,7 @@
                             <!-- <div style="display: flex;">
                               <button
                                   (click)="maxRuleCounterMinus();bmxItem.componentText[y]['RATE'] = 0;leaveStar(y)"
-                                  *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 " style="background-color: #ee7f25;
+                                  *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 " style="background-color: #ee7f25;    
                                   color: white;
                                   min-width: 20px;
                                   line-height: 19px;
@@ -718,7 +718,7 @@
                             <!-- <div style="display: flex;gap: 60px;flex-direction: column;">
                               <div *ngFor="let criteria of testName.CRITERIA  let x =  index">
                                   <button (click)="criteria.RATE = 0;leaveCriteriaStar(y,x)"
-                                      *ngIf="criteria.RATE>0 && y != 0 " style="background-color: #ee7f25;
+                                      *ngIf="criteria.RATE>0 && y != 0 " style="background-color: #ee7f25;    
                                       color: white;
                                       min-width: 20px;
                                       line-height: 19px;
