--- a/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
+++ b/src/app/bmx/bmx-creator/survey-creation-design/templates/rating-scale/rating-scale.component.html
@@ -1,14 +1,14 @@
-<div *ngIf="showModalVideo && bmxClientPageOverview" id="myModal" class="modal-video"
+<div *ngIf="showCreationModalVideo && bmxClientPageOverview" id="myModal" class="modal-video"
     style="display: flex;flex-direction: column;gap: 2px;">
     <!-- <label class="container-checkbox">Don't show again
-        <input (click)="saveSelection()" type="checkbox" value="Bike" #modalChecked>
-        <span class="checkmark">&#x2714;</span>
+        <input (click)="saveSelection()" type="checkbox" value="Bike" #modalChecked> 
+        <span class="checkmark">&#x2714;</span>        
     </label> -->
     <div class="modal-content">
-        <video src='{{VIDEO_PATH}}' controls></video>
+        <video src='{{CREATION_VIDEO_PATH}}' controls></video>
 
     </div>
-    <button class="btn btn-raised close-modal" (click)="showModalVideo=false">close</button>
+    <button class="btn btn-raised close-modal" (click)="showCreationModalVideo=false">close</button>
 </div>
 <!-- ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗  SETTINGS ICONS  ➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗➗ -->
 <div *ngIf="bmxClientPageOverview" style="display: flex;
@@ -144,8 +144,8 @@
                 <mat-icon style="font-size: 26px;" class="full-icon">explicit</mat-icon>
             </button>
         </div>
-
-        <button (click)="showModalVideo=true; editSingleTableCells = false" class="add-column" matTooltip="see tutorial"
+       
+        <button (click)="showCreationModalVideo=true; editSingleTableCells = false" class="add-column" matTooltip="see tutorial"
             matTooltipPosition="above" mat-icon-button aria-label="ranking">
             <mat-icon style="font-size: 26px;" class="full-icon">video_library</mat-icon>
         </button>
@@ -161,10 +161,6 @@
         <button (click)="selectedIndex = i; editSingleTableCells = false" class="add-column"
             matTooltip="insert test names" matTooltipPosition="above" *ngIf="i !== selectedIndex" mat-icon-button>
             <mat-icon style="font-size: 25px;" class="full-icon">edit</mat-icon>
-        </button>
-        <button (click)="showMatrixMenuBmx()" mat-icon-button matTooltip="open menu"
-                matTooltipPosition="right">
-                <mat-icon class="full-icon">{{iconMenuShow}}</mat-icon>
         </button>
     </div>
 </div>
@@ -321,7 +317,7 @@
                 <div *ngFor="let columnName of columnsNames; let e =  index"
                     style="display: flex;align-items: center;justify-content: center;"
                     [ngClass]="(columnName.includes('Comments') == true)?'red':'blue'"
-                    [style.padding]="bmxItem.componentSettings[0].rowHeight + 'px'" [style.width]="(columnName == 'rationale')?bmxItem.componentSettings[0].rationalewidth + 'px':
+                    [style.padding]="bmxItem.componentSettings[0].rowHeight + 'px'" [style.width]="(columnName == 'rationale')?bmxItem.componentSettings[0].rationalewidth + 'px': 
                     (columnName == 'RATE')?bmxItem.componentSettings[0].rateWidth + 'px':
                     (columnName == 'nameCandidates')?bmxItem.componentSettings[0].nameCandidatesWidth + 'px':
                     (columnName.includes('Comments'))?bmxItem.componentSettings[0].commentsWidth + 'px':
@@ -400,7 +396,7 @@
                             <div style="display: flex;">
                                 <button
                                     (click)="maxRuleCounterMinus();bmxItem.componentText[y]['RATE'] = 0;leaveStar(y)"
-                                    *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 " style="background-color: #ee7f25;
+                                    *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 " style="background-color: #ee7f25;    
                             color: white;
                             min-width: 20px;
                             line-height: 19px;
@@ -414,7 +410,7 @@
                             <div style="display: flex;gap: 60px;flex-direction: column;">
                                 <div *ngFor="let criteria of testName.CRITERIA  let x =  index">
                                     <button (click)="criteria.RATE = 0;leaveCriteriaStar(y,x);maxRuleCounterMinus()"
-                                        *ngIf="criteria.RATE>0 && y != 0 " style="background-color: #ee7f25;
+                                        *ngIf="criteria.RATE>0 && y != 0 " style="background-color: #ee7f25;    
                              color: white;
                              min-width: 20px;
                              line-height: 19px;
@@ -490,7 +486,7 @@
                                 matTooltip="double click to delete column" matTooltipPosition="above"
                                 (dblclick)="deleteColumn(columnName)">x</span>
 
-
+                            
 
                             <textarea *ngIf="editSingleTableCells"
                                 [style.font-size]="bmxItem.componentSettings[0].fontSize +'px'"
@@ -568,7 +564,7 @@
                 <div style="display: flex;gap: 23px;padding-top: 10px;position: absolute;right: 24px;">
                     <div *ngFor="let criteria of testName.CRITERIA  let x =  index">
                         <button (click)="criteria.RATE = 0;leaveCriteriaStar(y,x);maxRuleCounterMinus()"
-                            *ngIf="criteria.RATE>0 && y != 0 " style="background-color: #ee7f25;
+                            *ngIf="criteria.RATE>0 && y != 0 " style="background-color: #ee7f25;    
                           color: white;
                           min-width: 20px;
                           line-height: 19px;
@@ -627,7 +623,7 @@
                             <!-- <div style="display: flex;">
                                 <button
                                     (click)="maxRuleCounterMinus();bmxItem.componentText[y]['RATE'] = 0;leaveStar(y)"
-                                    *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 " style="background-color: #ee7f25;
+                                    *ngIf="bmxItem.componentText[y]['RATE']>0 && y != 0 " style="background-color: #ee7f25;    
                                     color: white;
                                     min-width: 20px;
                                     line-height: 19px;
@@ -640,7 +636,7 @@
                             <!-- <div style="display: flex;gap: 60px;flex-direction: column;">
                                 <div *ngFor="let criteria of testName.CRITERIA  let x =  index">
                                     <button (click)="criteria.RATE = 0;leaveCriteriaStar(y,x)"
-                                        *ngIf="criteria.RATE>0 && y != 0 " style="background-color: #ee7f25;
+                                        *ngIf="criteria.RATE>0 && y != 0 " style="background-color: #ee7f25;    
                                         color: white;
                                         min-width: 20px;
                                         line-height: 19px;
